# Gemma-Alignment-Paradigms

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Flask chat app/: Dockerfile  app.py  model_adapter.py
benchmarks/: perf_report_template.md
configs/: defaults.yml  ppo_rl_270m.yml  sft_lora_270m.yml  staged_sft_then_ppo.yml
data/datasets/safety/: test.jsonl  val.jsonl
docs/: README.md  architecture.md  configuration.md  deployment.md  graph-rag.md  safety-compliance.md
docs/api/: README.md  openapi.yaml
docs/operations/: ingestion-runbook.md  monitoring-alerting.md  retraining-runbook.md
docs/setup/: backend.md  frontend.md  neo4j.md  vector-store.md
gemma-alignment/: README.md  run_experiment.sh
gemma-alignment/benchmarks/: perf_report_template.md
gemma-alignment/configs/: defaults.yml  ppo_rl_270m.yml  qlora_1b.yml  sft_lora_270m.yml  staged_sft_then_ppo.yml
gemma-alignment/data/: README.md  download_datasets.py
gemma-alignment/docs/: design_note.md  reward_model_design.md
gemma-alignment/src/api/: serve_demo.py
gemma-alignment/src/core/: config.py  registry.py  utils.py
gemma-alignment/src/data/: __init__.py  base_dataset.py  clinical_dataset.py  conala_dataset.py  safety_dataset.py
gemma-alignment/src/evaluation/: evaluator.py  human_eval_manifest.py  metrics.py
gemma-alignment/src/experiments/: runner.py
gemma-alignment/src/models/: base_model.py  gemma_wrapper.py  peft_adapters.py  reward_model.py
gemma-alignment/src/tokenization/: tokenizer_wrapper.py
gemma-alignment/src/trainers/: base_trainer.py  rl_trainer.py  sft_trainer.py  staged_trainer.py
gemma-alignment/tests/: test_trainer_sft.py
src/: __init__.py
src/api/: __init__.py
src/core/: __init__.py  config.py  utils.py
src/data/: base_dataset.py  clinical_dataset.py  conala_dataset.py  safety_dataset.py
src/evaluation/: __init__.py  evaluator.py  human_eval_manifest.py  metrics.py
src/experiments/: __init__.py  runner.py
src/models/: __init__.py  base_model.py  gemma_wrapper.py  peft_adapters.py  reward_model.py
src/tokenization/: __init__.py  tokenizer_wrapper.py
src/trainers/: __init__.py  base_trainer.py  rl_trainer.py  sft_trainer.py  staged_trainer.py
tests/: test_config.py  test_dataset.py  test_reward_model.py
(+1 files in other folders)
